# sentry

./: .env.example  .gitignore  .pre-commit-config.yaml  .sentries-metadata.json  .sentriesrc  BRANCH_CLEANUP_SUMMARY.md  CAMEL_PHASE1_SUMMARY.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  TESTING.md  pyproject.toml  test_chat_local.py  test_full_workflow_local.py  test_testsentry_local.py
.github/workflows/: doc-sentry.yml  test-sentries.yml  test-sentry.yml
apps/camel_dashboard/: app.py  requirements.txt
apps/metrics_viz/: app_streamlit.py
artifacts/: .gitkeep
docs/: 01-metrics-overview.md  mermaid-diagrams.md
docs/architecture/: FRAMEWORK_GUIDE.md  WORKFLOW_ENHANCEMENTS.md
docs/cleanup/: CODE_DEDUPLICATION_DECISIONS.md
docs/dev/: INSTALL.md  QUICKSTART.md  USAGE_EXAMPLES.md
docs/notes/camel-sessions/: CAMEL_PHASE1_COMPLETE.md  CAMEL_PHASE1_SUMMARY.md  CAMEL_PHASE2_COMPLETE.md  CAMEL_PHASE3_COMPLETE.md
docs/notes/project-status/: CONSOLIDATED_STATUS.md  FINAL_STATUS.md  FUTURE_OBSERVABILITY_TASKS.md  PROJECT_STATUS_AUDIT.md  PROJECT_SUMMARY.md
examples/: docsentry_workflow.py  token_bucket_example.py
examples/workflows/: doc-sentry.yml  test-sentry.yml
scripts/: check-runner-status.sh  demo_phase3.py  demo_workflow.py  e2e_test.py  fix_flake8.py  fix_flake8_smart.py  fix_flake8_targeted.py  generate_reports.py  install_sentries.py  launch_dashboard.py  manage_runner.sh  restore_imports.py  setup-self-hosted-runner.sh  setup_sentries.py  smoke.py  update_models.py
sentries/: __init__.py  banner.py  camel_agents.py  chat.py  chat_simulation.py  cleanup.py  codesentry.py  diff_utils.py  docsentry.py  example_feature.py  git_utils.py  intelligent_analysis.py  ollama_utils.py  patch_engine.py  prompts.py  runner_common.py  setup_cli.py  smart_prompts.py  status.py  test_basic.py  test_example_feature.py  test_patch_engine.py  testsentry.py  testsentry_camel.py  trigger_sentry.py  update_models_cli.py
sentries/camel/: __init__.py  coordinator.py  error_recovery.py  llm.py  patcher.py  planner.py  tools.py
sentries/framework/: __init__.py  agents.py  coordinators.py  error_recovery.py  llm.py  observability.py  tools.py  workflows.py
sentry_examples/: rate_limiter.py
tests/: test_basic.py  test_camel_demo.py  test_camel_git_ops.py  test_camel_integration.py  test_camel_patcher.py  test_camel_planner.py  test_chat_modes.py  test_ci_integration.py  test_observability_basic.py  test_observability_comprehensive.py  test_observability_integration.py  test_observability_simple.py  test_observability_working.py  test_patch_engine.py  test_pipeline_integration.py
